--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "ts-template",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "description": "A typescript function which allows for (re)publishing dead-letter messages to a given topic.",
   "repository": "jgunnink/pubsub-deadletter-republisher",
   "main": "dist/index.js",
+  "engines": {
+    "node": ">=20.0.0 <21.0.0"
+  },
   "scripts": {
     "start": "npx tsc-watch --onSuccess 'npx @google-cloud/functions-framework --target=republish'",
-    "deploy": "gcloud functions deploy ts-template --gen2 --runtime=nodejs18 --trigger-http --allow-unauthenticated --region australia-southeast1 --entry-point=republish",
+    "deploy": "gcloud functions deploy ts-template --gen2 --runtime=nodejs20 --trigger-http --allow-unauthenticated --region australia-southeast1 --entry-point=republish",
     "build": "npx tsc",
     "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' nyc --reporter=lcov mocha -r ts-node/register 'tests/**/*.ts'"
   },
